# ros2_robotics_demo

./: .gitignore  README.md
src/cpp_pubsub/: CMakeLists.txt  LICENSE  package.xml
src/cpp_pubsub/launch/: talker_listener.launch.py
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/sensor_demo/: CMakeLists.txt  package.xml
src/sensor_demo/config/: laser_sensor_demo.rviz
src/sensor_demo/launch/: laser_with_rviz.launch.py  laser_with_tf.launch.py
src/sensor_demo/src/: laser_publisher.cpp
src/sensor_demo/urdf/: laser_robot.urdf.xacro
src/simple_arm_description/: CMakeLists.txt  package.xml
src/simple_arm_description/backups/launch/: display_launch_original_20251110.py
src/simple_arm_description/backups/urdf/: simple_arm_urdf_20251109.xacro  simple_arm_urdf_backup20251110.xacro
src/simple_arm_description/launch/: display.launch.py  gazebo.launch.py
src/simple_arm_description/rviz/: simple_arm.rviz
src/simple_arm_description/src/: simple_arm_trajectory.cpp
src/simple_arm_description/urdf/: simple_arm.urdf
src/simple_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/simple_arm_moveit_config/config/: controllers.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  simple_arm.srdf
src/simple_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/simple_arm_moveit_config/urdf/: simple_arm.urdf.xacro
src/ur5_demo_sequence/: CMakeLists.txt  package.xml
src/ur5_demo_sequence/launch/: demo_sequence.launch.py
src/ur5_demo_sequence/src/: demo_sequence.cpp
