<?xml version="1.0"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>ROS 2 tutorial publisher/subscriber package</description>
  <maintainer email="yuki_ogata@example.com">yuki_ogata</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>